--- a/public/views/main.html
+++ b/public/views/main.html
@@ -9,7 +9,7 @@
 
 </div> -->
 <div id="frontcont">
-    <div class="front">
+    <div class="front" styles="height: 322px;">
 
         <div class="fronttext">
           <h1>Get great offers on 2017 forester & Outback<br>
@@ -20,23 +20,13 @@
           <a><h4>SEE SPECIAL OFFERS</h4></a>
         </div>
         <div class="frontlinks">
-          <a><h1>2017 IMPREZA</h1></a>
+          <a><h1>2017 Forester</h1></a>
           <a><h1>SPECIAL OFFERS</h1></a>
           <a><h1>AWARDS</h1></a>
         </div>
-
     </div>
-    <!-- <span class="front"></span>
-    <span class="front"></span> -->
+
 </div>
-  <!-- </div> -->
-
-    <!-- <div class="background2"> other img </div> -->
-    <!-- <div> Your Content </div>
-    <div> Your Content </div>
-    <div> Your Content </div> -->
-
-
 
 <div class="cars">
 
