--- a/public/styles/mobile.sass
+++ b/public/styles/mobile.sass
@@ -1,13 +1,170 @@
 
 @media only screen and (max-width:650px)
+  html
+    margin: 0
+  body
+    margin: 0
+    display: grid
   #top
     display: none
-  #white
-    top: 0px
+
+  .white
+    position: relative
+    margin: 0
+    border-bottom: 1px solid #CCCCCC
+    height: 58px
+    width: 100%
+    color: #232323
+    position: fixed
+    display: flex
+    justify-content: center
+    background-color: #FAFAFA
+    z-index: 2
+
   #centermenu
     background-color: grey
     display: none
+
   .items
     display: none
+
+  .frontcont
+    width: 100%
+    height: 322px
+
+  .bp
+    display: none
+
+  .build
+    font-size: 20px
+    padding-top: 17px
+    color: #999
+    font-weight: bold
+    margin: 0
+
   .front
-    margin-top: 60px important
+    width: 100%
+    height: 322px
+    position: relative
+    background: url("../assets/imgs/bigoutbackback.JPG") no-repeat center center
+    -webkit-background-size: cover
+    -moz-background-size: cover
+    background-size: 100% 322px cover
+    z-index: 0
+    margin-top: 59px
+    display: inline-block
+    text-align: center
+
+  .fronttext
+    color: white
+    font-size: 10px
+    font-family: sans-serif
+
+  .frontlinks
+    height: 30px
+    width: 500px
+    top: 150px
+    position: relative
+    font-weight: bold
+    font-family: sans-serif
+    text-align: center
+    color: white
+    margin: 0 auto
+
+  .frontlinks h1
+    width: 150px
+    display: inline-block
+    text-align: center
+    font-weight: normal
+    vertical-align: middle
+    font-size: 16px
+    opacity: .8
+
+  .special
+    height: 54px
+    width: 161px
+    background-color: grey
+    opacity: .8
+    color: white
+    font-family: sans-serif
+    font-weight: lighter
+    font-size: 16px
+    position: relative
+    text-align: center
+    vertical-align: middle
+    margin: 0 auto
+
+  .special h4
+    font-family: sans-serif
+    font-size: 16px
+    font-weight: lighter
+    vertical-align: middle
+    position: absolute
+    top: -10px
+
+  .side
+    height: 30px
+    width: 150px
+    position: relative
+    margin: auto 0
+    display: flex
+    flex-direction: row
+
+  .byo
+	  width: 28px
+	  height: 24px
+  	background: url('../assets/imgs/siteimgs.PNG') no-repeat -95px -269px
+    position: relative
+    top: 10px
+    text-decoration: none
+
+  .cars
+    height: 920px
+    width: 100%
+    background-color: #FAFAFA
+    position: relative
+    display: flex
+    margin: auto
+    top: 0
+    z-index: 1
+    flex-wrap: wrap
+
+  .car
+    width: 265px
+    height: 186px
+    margin: 12px auto
+    text-align: center
+    font-family: sans-serif
+    font-weight: bold
+    color: #20609F
+    text-decoration: none
+    z-index: 1
+
+  .car h2
+    font-size: 14px
+    margin: auto
+    width: 80px
+
+  .car h2:hover
+    width: 100px
+    color: #414141
+    margin: 0 auto
+
+  .car h3
+    font-size: 14px
+    color: #B8B8B8
+    display: inline
+    margin: 0
+
+  .car:hover
+    cursor: pointer
+
+  .carbut
+    height: 112px
+    width: 206px
+
+  .modelbutton
+    width: 164px
+    text-align: center
+    position: relative
+    margin: 0 auto
