--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -8,12 +8,12 @@ $break-small: 650px
     display: grid
 
   .white
+    height: 58px
+    width: 100%
     position: relative
     margin: 0
     top: 38px
     border-bottom: 1px solid #CCCCCC
-    height: 58px
-    width: 100%
     color: #232323
     position: fixed
     display: flex
@@ -28,11 +28,11 @@ $break-small: 650px
     border: none
 
   .itemscon
+    height: 20px
+    width: 550px
     position: relative
     display: flex
     justify-content: flex-end
-    height: 20px
-    width: 550px
     bottom: -5px
 
   .topitems
@@ -119,12 +119,12 @@ $break-small: 650px
     position: relative
 
   .centermenu
+    height: 100%
+    width: 500px
     position: relative
     display: flex
     flex-direction: row
     justify-content: center
-    height: 100%
-    width: 500px
     margin: 0 auto
 
   .items
@@ -158,6 +158,7 @@ $break-small: 650px
     display: flex
     justify-content: flex-end
     top: 10px
+
 
   .sideitems a
    text-decoration: none
@@ -207,6 +208,9 @@ $break-small: 650px
     position: relative
     top: 5px
     text-decoration: none
+
+  .build
+    display: none
 
   .footersociallinks
     position: relative
@@ -945,8 +949,6 @@ $break-small: 650px
     height: 100%
     width: 671px
     position: relative
-    // border: 1px dotted white
-    // display: inline-block
     margin: 0 auto
 
   .view
@@ -1050,20 +1052,6 @@ $break-small: 650px
   .fronttext
     position: relative
     margin: 0 auto
-  // .background2
-  //   height: 855px
-  //   width: 100vw
-  //   position: relative
-  //   background: url("../assets/imgs/Impreza.JPG") no-repeat center center
-  //   -webkit-background-size: cover
-  //   -moz-background-size: cover
-  //   background-size: cover
-
-
-  // .owl-carousel
-  //   height: 855px
-  //   width: 100%
-  //   background-color: blue
 
   .fronttext
     height: 100px
@@ -1138,7 +1126,7 @@ $break-small: 650px
 
   .tool
     margin: auto
-    width: 400px
+    width: 15%
     text-align: center
     display: flex
     flex-direction: column
