--- a/public/styles/mobile.sass
+++ b/public/styles/mobile.sass
@@ -6,8 +6,6 @@ html, body, main, div, .tool
   font: inherit
   vertical-align: baseline
 
-
-
 @media only screen and (max-width:650px)
   html
     margin: 0
@@ -202,17 +200,16 @@ html, body, main, div, .tool
    font-size: 36px
 
   .tool
-    height: 130px
-    width: 218px
+    height: 140px
+    width: 240px
+    top: 100px
     position: relative
-    text-align: center
     display: flex
     flex-direction: column
     font-size: 18px
     font-family: sans-serif
     cursor: pointer
-    border: 1px solid black
-    margin: 10px
+    margin-top: 0
 
   .tool a
     text-decoration: none
@@ -226,3 +223,142 @@ html, body, main, div, .tool
     margin: auto
     width: 76px
     cursor: pointer
+
+  .promise
+    color: white
+    background-color: #0FA4DC
+    display: flex
+    flex-direction: column
+    align-items: center
+    height: 750px
+    width: 100%
+
+  .love
+    height: 325px
+    width: 325px
+    margin: 0
+    background: url("../assets/imgs/lovepromise.jpg") no-repeat center center
+    -webkit-background-size: cover
+    -moz-background-size: cover
+    background-size: cover
+
+  .tslp
+    height: 200px
+    width: 100%
+    position: relative
+    text-align: center
+
+  .tslp h2
+    font-size: 36px
+    font-family: sans-serif
+
+  .learn
+    height: 60px
+    width: 250px
+    background-color:
+    background-color: #0FA4DC
+    color: white
+    border: 2px white solid
+
+  .learn:hover
+    border: 2px black solid
+    color: black
+
+  .content
+    width: 100%
+    margin: 0
+    display: flex
+    flex-direction: column
+
+  .content p
+    border: 1px solid white
+    width: 450px
+    height: 30px
+    margin: 300px auto
+    padding-top: 5px
+
+  .fma3
+    height: 400px
+    width: 100%
+    display: inline-block
+    text-align: center
+    color: white
+
+  .fma2
+    height: 400px
+    width: 100%
+    display: inline-block
+    color: white
+    text-align: center
+
+  #left
+    background: url("../assets/imgs/ALG.jpg") no-repeat center center
+    -webkit-background-size: cover
+    -moz-background-size: cover
+    background-size: cover
+
+  #mid
+    background: url("../assets/imgs/MY18_OBK_HP_FMA.jpg") no-repeat center center
+    -webkit-background-size: cover
+    -moz-background-size: cover
+    background-size: cover
+
+  #right
+    background: url("../assets/imgs/MY18_WRX_HP_FMA.jpg") no-repeat center center
+    -webkit-background-size: cover
+    -moz-background-size: cover
+    background-size: cover
+
+  #lef
+    background: url("../assets/imgs/owner.jpg") no-repeat center center
+    -webkit-background-size: cover
+    -moz-background-size: cover
+    background-size: cover
+
+  #rig
+    background: url("../assets/imgs/desk.jpg") no-repeat center center
+    -webkit-background-size: cover
+    -moz-background-size: cover
+    background-size: cover
+
+  .footer
+    height: 350px
+    width: 100%
+    margin: auto
+    background-color: #232323
+    position: relative
+    display: inline-flex
+    justify-content: center
+    color: white
+
+  .rowcollapse
+    display: none
+
+  #global_footer
+    display: none
+
+  .backtotop
+    height: 100px
+    width: 100%
+    padding: 49px 0 53px 0
+    text-align: center
+    background-color: #EFEFEF
+
+  .topscroller
+    height: 90px
+    width: 150px
+    position: relative
+    bottom: 0
+    margin: 0 auto
+    color: #0FA4DC
+
+  .arrowimg
+    height: 40px
+    width: 40px
+    background: url("../assets/imgs/back-to-top.png")
+    border: none
+
+  .arrowimg:hover
+    height: 40px
+    width: 40px
+    background: url("../assets/imgs/back-to-top-hover.png")
