--- a/public/views/cart.html
+++ b/public/views/cart.html
@@ -40,12 +40,12 @@ myEvent(chkevent, function(e) {
     <div class="leather" ng-repeat="int in ints" style="background: url('{{int.intimg}}'); color: white">
     </div>
 
-
+<!-- 
     <h1>Packages</h1>
 
     <div class="packages">
         {{int}}
-    </div>
+    </div> -->
 
     <h1>Accessories</h1>
 
