--- a/public/styles/mobile.sass
+++ b/public/styles/mobile.sass
@@ -362,3 +362,33 @@ html, body, main, div, .tool
     height: 40px
     width: 40px
     background: url("../assets/imgs/back-to-top-hover.png")
+
+  .vehiclecardscon
+    height: 100%
+    width: 100%
+    top: 100px
+    position: absolute
+
+  .modelcon
+    height: 400px
+    width: 100%
+    border: 1px solid black
+    position: relative
+    display: flex
+    flex-direction: column
+    margin-bottom: 40px
+
+  // .modeldetcon
+  //   height: 100px
+  //   width: 100%
+  //   display: flex
+  //   flex-direction: column
+  //   background-color: white
+
+  .modelimg
+    height: 400px
+    width: 100%
+    background-repeat: no-repeat
+    -webkit-background-size: cover
+    -moz-background-size: cover
+    background-size: cover
