--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -518,13 +518,14 @@ $break-small: 650px
 
   .vehiclelist
     height: 80px
-    width: 32.5%
+    width: 33.2%
     position: relative
     display: inline-block
+    margin-left: -3px
+    left: 1px
     bottom: 0
     vertical-align: center
     background-color: #EFEFEF
-    // border: .5px #CCCCCC solid
 
   .vehiclelist:hover
     background-color: white
