--- a/public/views/build-your-own.html
+++ b/public/views/build-your-own.html
@@ -31,11 +31,11 @@
         </div>
         <div class="subinfoprice">
           <h4>Starting at</h4>
-          <h3>{{car.price}}*</h3>
+          <h4>{{car.price}}*</h4>
         </div>
         <div class="subinfompg">
-          <h4>mog up to</h4>
-          <h3>{{car.hmpg}}/{{car.cmpg}}**</h3>
+          <h4>mpg up to</h4>
+          <h4>{{car.hmpg}}/{{car.cmpg}}**</h4>
         </div>
 
       </div>
@@ -48,7 +48,7 @@
         </h1>
       </div>
     <div class="bottomcontent">
-      <div class="modelbutton" ui-sref="accolades" style="border-right: 2px #EFEFEF solid">ACCOLADES</div>
+      <div class="modelbutton" id="accolades" ui-sref="accolades" style="border-right: 2px #EFEFEF solid">ACCOLADES</div>
       <div class="modelbutton" id="compare">COMPARE</div>
       <div class="modelbutton" id="build" ui-sref="cart({vehicle: car._id})">BUILD</div>
     </div>
