--- a/public/styles/mobile.sass
+++ b/public/styles/mobile.sass
@@ -366,29 +366,77 @@ html, body, main, div, .tool
   .vehiclecardscon
     height: 100%
     width: 100%
-    top: 100px
+    top: 165px
     position: absolute
 
   .modelcon
-    height: 400px
+    height: 450px
     width: 100%
-    border: 1px solid black
     position: relative
     display: flex
     flex-direction: column
+    margin: 0
     margin-bottom: 40px
 
-  // .modeldetcon
-  //   height: 100px
-  //   width: 100%
-  //   display: flex
-  //   flex-direction: column
-  //   background-color: white
-
   .modelimg
-    height: 400px
+    height: 210px
     width: 100%
     background-repeat: no-repeat
     -webkit-background-size: cover
     -moz-background-size: cover
     background-size: cover
+
+  .modelequip
+    height: 50%
+    width: 100%
+    margin: 0
+    display: flex
+    flex-direction: column
+
+  .subinfo
+    height: 50
+    width: 100%
+    border: black 1px solid
+    display: flex
+    flex-direction: row
+
+  .subinfoprice
+    height: 15px
+    width: auto
+    display: flex
+    flex-direction: row
+    position: relative
+    top: 0
+
+  .subinfompg
+    height: 15px
+    width: auto
+    display: flex
+    flex-direction: row
+    position: relative
+
+  .carfeat
+    display: none
+
+  .bottomcontent
+    height: 155px
+    width: 100%
+    position: relative
+    display: flex
+    flex-wrap: wrap
+    margin: 0
+
+  #accolades
+    height: 75px
+    width: 49%
+    background-color: white
+
+  #compare
+    height: 75px
+    width: 49%
+    background-color: white
+
+  #build
+    height: 75px
+    width: 100%
+    background-color: #0099FF
