--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -724,6 +724,20 @@ $break-small: 650px
     width: 40px
     border-radius: 100%
     border: 1px solid grey
+    background: url("../assets/imgs/greenplus.jpg") center no-repeat
+    background-size: 20px 20px
+    float: right
+    margin-right: 15px
+
+  .addtran:hover
+    height: 40px
+    width: 40px
+    border-radius: 100%
+    border: 1px solid grey
+    background: url("../assets/imgs/bgchck.png") center no-repeat
+    background-size: 20px 20px
+    float: right
+    margin-right: 15px
 
   .t
     position: relative
@@ -806,6 +820,17 @@ $break-small: 650px
     width: 40px
     border-radius: 100%
     border: .5px solid grey
+    background: url("../assets/imgs/greenplus.jpg") center no-repeat
+    background-size: 20px 20px
+    position: absolute
+    right: 10px
+    bottom: 10px
+
+  .add:hover
+    height: 40px
+    width: 40px
+    background: url("../assets/imgs/bgchck.PNG") center no-repeat
+    background-size: 20px 20px
 
   .accimg
     height: 177px
