--- a/public/styles/main.sass
+++ b/public/styles/main.sass
@@ -13,3 +13,12 @@
 .footersub
   position: relative
   font-family: sans-serif
+
+// .ty
+//   height: 200px
+//   width: 500px
+//   background-color: green
+//   opacity: .8
+//   color: green
+//   position: absolute
+//   top: -200px
