--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -1375,5 +1375,23 @@ $break-small: 650px
     top: 50px
     margin: 0 0 0
 
+  .ty
+    height: 400px
+    width: 700px
+    background-color: black
+    opacity: .8
+    color: white
+    position: relative
+    top: 300px
+    margin: auto
+    border-radius: 15px
+    font-size: 12px
+    text-align: center
+    display: flex
+
+  .ty h1
+    margin: auto auto
+    position: relative
+
 .addedoptions
   // border-bottom: 1px solid white
