--- a/public/views/cart.html
+++ b/public/views/cart.html
@@ -6,7 +6,10 @@
 <body ng-controller="buildCtrl">
   <img class="cartbackground" style="background: url('{{vehicle.cartback}}') no-repeat center center;">
   <div class="title">
-    <div><h1>Build & Price {{vehicle.model}}</h1><pop ng-show="orderpop"></div>
+    <div>
+      <h1>Build & Price {{vehicle.model}}</h1>
+      <pop ng-show="orderpop"></pop>
+      </div>
     <div class="change"><h3>CHANGE VEHICLE</h3></div>
   </div>
   <div class="cartmain" >
@@ -15,7 +18,6 @@
         <img class="carview" src="{{vehicle.carback}}">
       </div>
     <div class="options">
-
     <!-- <div class="transcont"> -->
       <h1 class="t">Transmission</h1>
     <div class="transmission">
@@ -127,15 +129,12 @@
     </div>
 </div>
     <h5>Legal Disclaimers</h5>
-
     <div class="order">
     <div class="finalbuild">
-
       <div id="price" class="builddets"><h1>${{total}}</h1>TOTAL</div>
       <div id="checkout" class="builddets" ng-click="orderpop = !orderpop"><h3>CHECKOUT</h3></div>
       <div id="testd" class="builddets"><h3>SCHEDULE A TEST DRIVE</h3></div>
     </div>
-
     </div>
 
   <button class="change" ng-click="changeData( { id : data.text_id , newtask: item }, $index )"> Change Task</button>
@@ -167,3 +166,4 @@
     </script>
 
 </body id="body">
+<ty ng-show="ty"></ty>
