--- a/public/views/finalorder.html
+++ b/public/views/finalorder.html
@@ -26,7 +26,7 @@
 <div class="emailform">
   <h3>Send us your car and a dealer will contact you shortly</h3>
   <input type="email" class="data" name="email" ng-model="email" placeholder="yourEmail">
-  <button class="submit" ng-click="postCart( { email: email}) ; validate({email: email})">Submit</button>
+  <button class="submit" ng-click="postCart( { email: email}) ; validate({email: email}); orderpop = !orderpop; ty = !ty">Submit</button>
 
 </div>
 </div>
