--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -324,7 +324,7 @@ $break-small: 650px
     width: 85px
     position: absolute
     display: grid
-    right: 0
+    right: 5px
     background-color: inherit
     top: 10px
 
@@ -765,7 +765,6 @@ $break-small: 650px
     height: 50px
     width: 50px
     margin: 0 5px
-    // background-color: green
     position: relative
     display: inline-block
     border-radius: 50%
@@ -782,12 +781,10 @@ $break-small: 650px
     border: 2px white solid
     background: url("../assets/imgs/checkmark.png") center
 
-
-
   .leather
     height: 50px
     width: 50px
-    margin: 0 5px
+    margin: 15px 5px
     position: relative
     display: inline-block
     border-radius: 50%
@@ -798,6 +795,12 @@ $break-small: 650px
     width: 615px
     margin: 0 auto
     background-color: white
+
+  .accessories
+    height: auto
+    width: 95%
+    border-bottom: 1px solid white
+    margin: auto
 
   .accessory
     height: 300px
@@ -1375,23 +1378,19 @@ $break-small: 650px
     top: 50px
     margin: 0 0 0
 
-  .ty
-    height: 400px
-    width: 700px
-    background-color: black
-    opacity: .8
-    color: white
+  .visual
+    height: auto
+    width: 90%
     position: relative
-    top: 300px
     margin: auto
-    border-radius: 15px
-    font-size: 12px
-    text-align: center
-    display: flex
+    border-top: 1px solid white
+    border-bottom: 1px solid white
+    font-family: sans-serif
+    font-weight: lighter
+    color: white
 
-  .ty h1
-    margin: auto auto
-    position: relative
+  .visual h4
+    font-weight: lighter
 
 .addedoptions
   // border-bottom: 1px solid white
