--- a/public/styles/main.sass
+++ b/public/styles/main.sass
@@ -14,11 +14,29 @@
   position: relative
   font-family: sans-serif
 
-// .ty
-//   height: 200px
-//   width: 500px
-//   background-color: green
-//   opacity: .8
-//   color: green
-//   position: absolute
-//   top: -200px
+.ty
+  height: 400px
+  width: 700px
+  background-color: black
+  opacity: .8
+  color: white
+  position: relative
+  top: 300px
+  margin: auto
+  border-radius: 15px
+  font-size: 12px
+  text-align: center
+  display: flex
+
+.ty h1
+  margin: auto auto
+  position: relative
+
+.colorname
+  position: relative
+  color: white
+  font-family: sans-serif
+  font-weight: lighter
+
+.visual h1
+  margin: 40px 0
