--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -1065,16 +1065,12 @@ $break-small: 650px
     margin: 0
 
   .front
-    height: 855px
+    height: 100vh
     width: 100vw
-    position: relative
-    background: url("../assets/imgs/bigoutbackback.JPG") no-repeat center center
-    -webkit-background-size: cover
-    -moz-background-size: cover
+    background: no-repeat center center
     background-size: cover
     z-index: 0
-    margin-top: 96px
-    display: inline-block
+    margin-top: 45px
     text-align: center
 
   .fronttext
