--- a/public/styles/main.sass
+++ b/public/styles/main.sass
@@ -40,3 +40,13 @@
 
 .visual h1
   margin: 40px 0
+
+.carousel-indicators
+  margin: 0 50px
+  margin-bottom: 100px
+
+.frontcontainer
+  padding-right: 0px
+  padding-left: 0px
+  margin-right: auto
+  margin-left: auto
