--- a/public/views/main.html
+++ b/public/views/main.html
@@ -8,24 +8,56 @@
   </div>
 
 </div> -->
-<div id="frontcont">
-    <div class="front" styles="height: 322px;">
+<div id="frontcont" class="frontcontainer" style="width:100%;">
+<div id="myCarousel" class="carousel slide front" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+          </ol>
 
-        <div class="fronttext">
-          <h1>Get great offers on 2017 forester & Outback<br>
-          Legacy, and Crosstrek models
-          </h1>
-        </div>
-        <div class="special">
-          <a><h4>SEE SPECIAL OFFERS</h4></a>
-        </div>
-        <div class="frontlinks">
-          <a><h1>2017 Forester</h1></a>
-          <a><h1>SPECIAL OFFERS</h1></a>
-          <a><h1>AWARDS</h1></a>
-        </div>
-    </div>
+        <div class="carousel-inner">
 
+          <div class="item active front">
+            <img src="./assets/imgs/bigoutbackback.JPG" alt="silvout" style="width:100%; position: absolute;">
+            <div class="fronttext">
+              <h1>Get great offers on 2017 forester & Outback<br>
+              Legacy, and Crosstrek models
+              </h1>
+            </div>
+          <div class="special">
+            <a><h4>SEE SPECIAL OFFERS</h4></a>
+          </div>
+          <div class="frontlinks">
+            <a><h1>2017 Forester</h1></a>
+            <a><h1>SPECIAL OFFERS</h1></a>
+            <a><h1>AWARDS</h1></a>
+          </div>
+          </div>
+          <div class="item">
+            <img src="./assets/imgs/Outback.jpg" alt="out" style="width:100%;">
+          </div>
+
+          <div class="item">
+            <img src="./assets/imgs/learnWRX.jpg" alt="wrx" style="width:100%;">
+          </div>
+
+          <div class="item">
+            <img src="./assets/imgs/learnWRX.jpg" alt="New york" style="width:100%;">
+          </div>
+
+          <!-- <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+          </a> -->
+
+        </div>
+</div>
 </div>
 
 <div class="cars">
