--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -1,6 +1,6 @@
 $break-small: 650px
 
-@media only screen and (min-width:650px)
+@media only screen and (min-width:750px)
   html
     margin: 0
   body
@@ -173,6 +173,7 @@ $break-small: 650px
     margin: auto 0
     display: flex
     flex-direction: row
+    // border: 1px solid red
 
   .side h4
     font-size: 12px
