--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -20,7 +20,7 @@ time, mark, audio, video {
 }*/
 
 
-
+@media only screen and (min-width:750px) {
 
 .subaruhome {
   margin: 11px 150px 0 23px;
@@ -110,3 +110,97 @@ time, mark, audio, video {
    position: relative;
    top: 50px;
  }
+
+}
+
+@media only screen and (max-width:750px) {
+
+  .subaruhome {
+    left: 0px;
+    top: 10px;
+  	background: url('../assets/imgs/siteimgs.PNG') no-repeat -1px 0;
+  	width: 150px;
+  	height: 40px;
+    position: absolute;
+  }
+
+  .items h1 {
+    width: auto;
+    font-size: 12px;
+    font-family: sans-serif;
+  }
+
+  .choose h3 {
+    height: 23px;
+    width: 300px;
+    position: relative;
+    color: #595959;
+    margin: 0 auto;
+  }
+
+  .choose h1 {
+    height: 20px;
+    width: 150px;
+    position: relative;
+    font-size: 14px;
+    font-family: sans-serif;
+    margin: 0 auto;
+    display: inline-block;
+    color: #595959
+  }
+
+  .modelcon h1 {
+    font-size: 20px;
+  }
+
+  .buildheader h1 {
+    height: auto;
+    width: 220px;
+    margin: 10px 0;
+    margin-right: 0;
+    position: absolute;
+    font-size: 1.5rem;
+  }
+
+  .buildheader h2 {
+    position: absolute;
+    right: 100px;
+    font-size: 12px;
+    top: 20px;
+    letter-spacing: 2px;
+  }
+  .modelequip {
+    width: 480px
+  }
+  .modelequip h1 {
+    font-size: .99rem
+  }
+
+  .cars a:visited {
+
+  }
+
+  .carbut:hover {
+    cursor: grab;
+  }
+
+  .subinfo h3 {
+    font-size: 1.55rem;
+    color: #333333;
+  }
+
+  .tool:hover {
+    color: #0FA4DC;
+  }
+
+  .affix {
+    top: 0;
+    width: 100%;
+    z-index: 9999;
+  }
+
+  .affix ~ .top {
+     position: relative;
+     top: 50px;
+   }
+}
