--- a/public/views/main.html
+++ b/public/views/main.html
@@ -20,7 +20,7 @@
         <div class="carousel-inner">
 
           <div class="item active front" style="margin: 10px 0;">
-            <img src="./assets/imgs/bigoutbackback.JPG" alt="silvout" style="width:100%; position: absolute;">
+            <img src="./assets/imgs/bigoutbackback.jpg" style="width:100%; position: absolute;">
             <div class="fronttext">
               <h1>Get great offers on 2017 forester & Outback<br>
               Legacy, and Crosstrek models
