--- a/public/views/cardropdown.html
+++ b/public/views/cardropdown.html
@@ -37,7 +37,7 @@
   </div>
 </div>
 
-<div class="vehiclepanel" ng-if="Impreza" style="background: url('../assets/imgs/impreza.jpg') center 100% no-repeat;">
+<div class="vehiclepanel" ng-if="Impreza" style="background: url('../assets/imgs/impreza.JPG') center 100% no-repeat;">
   <div class="vehicleinfo">
     <div class="model">
       <div class="modelyear">
