--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -28,6 +28,22 @@ $break-small: 650px
   	height: 10px
     border: none
 
+  .caronav
+    border: white solid 1px
+    height: 100px
+    display: flex
+    flex-direction: row
+    margin: auto
+    justify-content: center
+
+  .caromain
+    height: 50px
+    width: 200px
+    border: 1px solid white
+    display: flex
+    flex-direction: row
+    color: white
+
   .itemscon
     height: 20px
     width: 550px
