--- a/public/views/main.html
+++ b/public/views/main.html
@@ -10,12 +10,12 @@
 </div> -->
 <div id="frontcont" class="frontcontainer" style="width:100%;">
 <div id="myCarousel" class="carousel slide front" data-ride="carousel">
-          <ol class="carousel-indicators">
+          <ul class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-            <li data-target="#myCarousel" data-slide-to="3"></li>
-          </ol>
+            <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="2" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="3" class="active"></li>
+          </ul>
 
         <div class="carousel-inner">
 
@@ -36,7 +36,7 @@
           </div>
           </div>
           <div class="item">
-            <img src="./assets/imgs/Outback.jpg" alt="out" style="width:100%;">
+            <img src="./assets/imgs/crosstrekrain.jpg" alt="out" style="width:100%;">
           </div>
 
           <div class="item">
@@ -44,7 +44,7 @@
           </div>
 
           <div class="item">
-            <img src="./assets/imgs/learnWRX.jpg" alt="New york" style="width:100%;">
+            <img src="./assets/imgs/water.jpg" alt="New york" style="width:100%;">
           </div>
 
           <!-- <a class="left carousel-control" href="#myCarousel" data-slide="prev">
