--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -11,7 +11,7 @@ $break-small: 650px
   .white
     height: 58px
     width: 100%
-    position: relative
+    // position: relative
     margin: 0
     top: 38px
     border-bottom: 1px solid #CCCCCC
@@ -149,7 +149,7 @@ $break-small: 650px
     display: inline-block
     text-align: center
     background-color: #FAFAFA
-    margin: 15px
+    margin: auto 15px
 
   .items h1
     position: absolute
@@ -374,12 +374,13 @@ $break-small: 650px
     cursor: pointer
 
   .buildheader
+    margin: 0
     display: flex
     height: 70px
     width: 100%
-    position: fixed
+    position: relative
     background-color: #232323
-    top: 96px
+    top: 58px
     font-family: sans-serif
     color: #FAFAFA
     z-index: 1
