--- a/public/views/build-your-own.html
+++ b/public/views/build-your-own.html
@@ -1,5 +1,5 @@
 <title>Build & Price</title>
-<div class="buildheader" style="opacity: 1">
+<div class="buildheader" style="opacity: 1" data-spy="affix" data-offset-top="0">
 <h1>Build & Price</h1>
 <h2>YOUR SAVED SUBARU</h2>
 </div>
