--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -145,14 +145,15 @@ $break-small: 650px
     margin: 0 auto
 
   .items
-    height: 41px
+    height: 58px
     display: inline-block
     text-align: center
-    background-color: #FAFAFA
+    background-color: none
     margin: auto 15px
 
   .items h1
-    position: absolute
+    position: relative
+    top: 5px
 
   .items:hover
     cursor: pointer
@@ -162,7 +163,7 @@ $break-small: 650px
     width: 80px
 
   #tools
-    width: 125px
+    width: 135px
 
   #why
     width: 104px
@@ -1118,6 +1119,7 @@ $break-small: 650px
     text-align: center
     vertical-align: middle
     margin: 0 auto
+    cursor: pointer
 
   .special h4
     position: relative
@@ -1316,12 +1318,14 @@ $break-small: 650px
     width: 40px
     background: url("../assets/imgs/back-to-top.png")
     border: none
+    cursor: pointer
 
 
   .arrowimg:hover
     height: 40px
     width: 40px
     background: url("../assets/imgs/back-to-top-hover.png")
+    cursor: grab
 
 
   .footer
