--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -1087,12 +1087,12 @@ $break-small: 650px
     background: no-repeat center center
     background-size: cover
     z-index: 0
-    margin-top: 45px
+    margin-top: 0px
     text-align: center
 
   .fronttext
     position: relative
-    margin: 0 auto
+    margin: 15px auto
 
   .fronttext
     height: 100px
@@ -1102,7 +1102,6 @@ $break-small: 650px
     color: white
     font-size: 16px
     font-family: sans-serif
-    // border: solid 1px black
     display: flex
 
   .special
