--- a/public/views/main.html
+++ b/public/views/main.html
@@ -19,7 +19,7 @@
 
         <div class="carousel-inner">
 
-          <div class="item active front" style="margin: 10px 0;">
+          <div class="item active front" style="margin: 0;">
             <img src="./assets/imgs/bigoutbackback.jpg" style="width:100%; position: absolute;">
             <div class="fronttext">
               <h1>Get great offers on 2017 forester & Outback<br>
