--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -400,21 +400,20 @@ $break-small: 650px
     font-family: sans-serif
 
   .cars
-    height: 140px
-    padding: 15px 0
-    width: 1130px
-    background-color: #FAFAFA
+    padding: 25px 0
+    width: 1255px
+    background-color: white
     position: relative
     display: flex
     margin: auto
-    top: -85px
+    top: -100px
     z-index: 1
     flex-direction: row
     box-shadow: 0 18px 25px 0 rgba(0, 0, 0, 0.1)
 
   .car
-    width: 145px
-    margin: 12px auto
+    width: 180px
+    margin: auto
     text-align: center
     font-family: sans-serif
     font-weight: bold
@@ -422,8 +421,12 @@ $break-small: 650px
     text-decoration: none
     z-index: 1
 
+  .cardiv
+    height: 140px
+
   .car h2
     font-size: 14px
+    font-weight: bold
     margin: auto
     width: 80px
 
@@ -445,6 +448,7 @@ $break-small: 650px
   .carbut
     height: 70px
     width: 145px
+    margin: 12px 0 12px
 
   .modelbutton
     width: 164px
@@ -1084,14 +1088,14 @@ $break-small: 650px
     margin: 0
 
   .front
-    height: 100vh
+    height: 1000px
     width: 100vw
     background: no-repeat center center
     background-size: cover
     z-index: 0
     margin-top: 0px
     text-align: center
-
+  
   .fronttext
     position: relative
     margin: 15px auto
