--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -19,7 +19,8 @@ $break-small: 650px
     position: fixed
     display: flex
     justify-content: center
-    background-color: #FAFAFA
+    background-color: green
+    // background-color: #FAFAFA
     z-index: 2
 
   .arrow
@@ -1095,7 +1096,7 @@ $break-small: 650px
     z-index: 0
     margin-top: 0px
     text-align: center
-  
+
   .fronttext
     position: relative
     margin: 15px auto
