--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -11,7 +11,6 @@ $break-small: 650px
   .white
     height: 58px
     width: 100%
-    // position: relative
     margin: 0
     top: 38px
     border-bottom: 1px solid #CCCCCC
@@ -19,8 +18,7 @@ $break-small: 650px
     position: fixed
     display: flex
     justify-content: center
-    background-color: green
-    // background-color: #FAFAFA
+    background-color: #FAFAFA
     z-index: 2
 
   .arrow
