--- a/public/views/main.html
+++ b/public/views/main.html
@@ -107,7 +107,7 @@
   <div class="textwrapper">
     <a>
     <div class="topscroller">
-    <img class="arrowimg" onclick="topFunction()">
+    <img class="arrowimg">
       <h3>BACK TO TOP</h3>
     </div>
     </a>
@@ -162,11 +162,11 @@
           </div>
                   </div>
 
-          <div class="small-only">
+          <!-- <div class="small-only">
               <footer>
 
               </footer>
-          </div>
+          </div> -->
 
 
   </div>
