--- a/public/views/main.html
+++ b/public/views/main.html
@@ -8,7 +8,7 @@
   </div>
 
 </div> -->
-<div id="frontcont" class="frontcontainer" style="width:100%;">
+<div id="frontcont" class="frontcontainer" style="width:100%;" ng-click="boxCloser()">
 <div id="myCarousel" class="carousel slide front" data-ride="carousel">
           <ul class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -19,7 +19,7 @@
 
         <div class="carousel-inner">
 
-          <div class="item active front" style="margin: 10px 0;">
+          <div class="item active front" style="margin: 10px 10px;">
             <img src="./assets/imgs/bigoutbackback.jpg" style="width:100%; position: absolute;">
             <div class="fronttext">
               <h1>Get great offers on 2017 forester & Outback<br>
